<resources>
    <string name="app_name">Decision_Based_Game_Test</string>
    <string name="default_txtView">You are in Biology class, your teacher is discussing about the Performance Task that is due on Monday. What do you do?</string>
    <string name="default_Button1">Sample decision for the current situation</string>
    <string name="default_Button2">Sample text that would take up two lines within the button.</string>
    <string name="default_Button3">Sample text that would take up two lines within the button.</string>
    <string name="default_Button4">Sample text that would take up two lines within the button.</string>
    <string name="reset">RESET GAME</string>
    <string name="popOut1">You didn\'t grab the wrong item, didn\'t you?</string>
    <string name="popOut2">Ho ho, feeling lucky ey. How did you get here?</string>
    <string-array name="default_text">
        //Scenario Prompt
        <item>You are in Biology class, your teacher is discussing about the Performance Task that is due on Monday. What do you do?</item>
        //Choices
        <item>Sample text that would take up two lines within the button.</item>
        <item>Sample text that would take up two lines within the button.</item>
        <item>Sample text that would take up two lines within the button.</item>
        <item>Sample text that would take up two lines within the button.</item>
        //1st Choice Directory?
        <item>dialog_1_1</item>
        //2nd Choice Directory?
        <item>dialog_1_2</item>
        //3rd Choice Directory?
        <item>dialog_1_3</item>
        //4th Choice Directory?
        <item>dialog_1_4</item>
        //character state
        <item>character 1</item>
        //background state
        <item>background 1</item>
        //Type of Scenario
        <item>Dialog</item>
        //dag dag lang pag may time
    </string-array>
    <string-array name="templateFor4">
        //Scenario Prompt
        <item>Scenario Promt</item>
        //Choices
        <item>1st Choice</item>
        <item>2nd Choice</item>
        <item>3rd Choice</item>
        <item>4th Choice</item>
        //1st Choice Directory?
        <item>1 choice scenario</item>
        //2nd Choice Directory?
        <item>2 choice scenario</item>
        //3rd Choice Directory?
        <item>3 choice scenario</item>
        //4th Choice Directory?
        <item>4 choice scenario</item>
        //character state
        <item>1</item>
        //background state
        <item>1</item>
        //Type of Scenario
        <item>Dialog</item>
        //dag dag lang pag may time
    </string-array>
    <string-array name="templateFor3">
        //Scenario Prompt
        <item>Scenario Promt</item>
        //Choices
        <item>1st Choice</item>
        <item>2nd Choice</item>
        <item>3rd Choice</item>
        //1st Choice Directory?
        <item>1 choice scenario</item>
        //2nd Choice Directory?
        <item>2 choice scenario</item>
        //3rd Choice Directory?
        <item>3 choice scenario</item>
        //character state
        <item>1</item>
        //background state
        <item>1</item>
        //Type of Scenario
        <item>Dialog</item>
        //dag dag lang pag may time
    </string-array>
    <string-array name="templateFor2">
        //Scenario Prompt
        <item>Scenario Promt</item>
        //Choices
        <item>1st Choice</item>
        <item>2nd Choice</item>
        //1st Choice Directory?
        <item>1 choice scenario</item>
        //2nd Choice Directory?
        <item>2 choice scenario</item>
        //character state
        <item>1</item>
        //background state
        <item>1</item>
        //Type of Scenario
        <item>Dialog</item>
        //dag dag lang pag may time
    </string-array>
    <string-array name="templateFor1">
        //Scenario Prompt
        <item>Scenario Promt</item>
        //Choices
        <item>1st Choice</item>
        //1st Choice Directory?
        <item>1 choice scenario</item>
        //character state
        <item>1</item>
        //background state
        <item>1</item>
        //Type of Scenario
        <item>Dialog</item>
        //dag dag lang pag may time
    </string-array>
    <string-array name="first_scene">
        <item>Mc: Looks like biology class is about to start.\n
            Teacher: Good Morning class, for today the topic would be the Animal and Plant</item>
        <item>Next</item>
        <item>second_scene</item>
        <item>1</item>
        <item>1</item>
        <item>Dialog</item>
    </string-array>
    <string-array name="second_scene">
        <item>Loud Screams on the outside</item>
        <item>Tell the teacher they should check out the screams</item>
        <item>ignore</item>
        <item>fourth_1</item>
        <item>third_scene</item>
        <item>2</item>
        <item>1</item>
        <item>Dialog</item>
    </string-array>
    <string-array name="third_scene">
        <item>*You hear the Screams becoming Louder and Louder, Car Crashes Have Been heard really strong*</item>
        <item>Tell the teacher they should check out the screams</item>
        <item>ignore</item>
        <item>fourth_1</item>
        <item>third_scene</item>
        <item>1</item>
        <item>1</item>
        <item>Dialog</item>
    </string-array>
    <string-array name="fourth_1">
        <item>Teacher: (name of Mc) sit back down its some acidents going on down the streets and pay attention in class</item>
        <item>next</item>
        <item>fourth_2</item>
        <item>1</item>
        <item>1</item>
        <item>Dialog</item>
    </string-array>
    <string-array name="fourth_2">
        <item>A rushing person comes in the Science Lab screaming \n
        Person: RUN the school is in danger(might change this line sounds eh)</item>
        <item>next</item>
        <item>fourth_3</item>
        <item>1</item>
        <item>1</item>
        <item>Dialog</item>
    </string-array>
    <string-array name="fourth_3">
        <item>you and your teacher starts panicing and runs out of the laboratory \n
        You Run in the middle of the school only to find out a  huge infestation has been starting</item>
        <item>next</item>
        <item>fourth_4</item>
        <item>1</item>
        <item>1</item>
        <item>Dialog</item>
    </string-array>
    <string-array name="fourth_4">
        <item><![CDATA[ Mc: I <u>need to find a place</u> to hide into or atleast be able to survive till help comes ]]></item>
        <item>Gym</item>
        <item>Locker Room</item>
        <item>Kitchen</item>
        <item>Storage Room</item>
        <item>first_scene</item>
        <item>first_scene</item>
        <item>fifth</item>
        <item>second_scene</item>
        <item>1</item>
        <item>1</item>
        <item>Dialog</item>
    </string-array>
    <string-array name="fifth">
        <item>Choose your weapon</item>
        <item>Rocket Launcer</item>
        <item>Key</item>
        <item>Plasma ball</item>
        <item>Martin Pangit</item>
        <item>first_scene</item>
        <item>key</item>
        <item>key</item>
        <item>key</item>
        <item>1</item>
        <item>1</item>
        <item>Item</item>
    </string-array>
    <string-array name="key">
        <item>Try to open Gate?</item>
        <item>Yes</item>
        <item>No</item>
        <item>rest</item>
        <item>first_scene</item>
        <item>1</item>
        <item>1</item>
        <item>Dialog</item>
    </string-array>
    <string-array name="rest">
        <item>Gate 1</item>
        <item>Use key?</item>
        <item>Return</item>
        <item>won</item>
        <item>first_scene</item>
        <item>1</item>
        <item>1</item>
        <item>fourth_4</item>
        <item>Restricted</item>
    </string-array>
    <string-array name="won">
        <item>You won</item>
        <item>Return</item>
        <item>first_scene</item>
        <item>1</item>
        <item>1</item>
        <item>Dialog</item>
    </string-array>
    <string name="text_1">Return</string>
    <string name="text_2">Return to Start</string>
    <string name="text_3">Toggle Sound</string>
    <string name="text_4">Reset Game</string>
    <string name="text_5">Are you sure?</string>
    <string name="text_6">Yes</string>
    <string name="text_7">No</string>
    <string-array name="errorMessage">
        <item>
            <![CDATA[
            Oh no! You\'re not supposed to be here. I supposed you should go back to the start
            ]]>
        </item>
        <item>> Return to Start</item>
        <item>gameOver</item>
        <item>1</item>
        <item>background1</item>
        <item>Dialog</item>
    </string-array>
    <string-array name="gameOver">
        <item>
            <![CDATA[
            You wake up, finding yourself in the middle of a forest. The trees are thick and the sky is dark, you feel <br> as if something is wrong.<br>
            <br>
            Your body is cramped and you find it hard to move<br>
            <br>
            Regardless, you stand up, and your eyes are drawn to the path ahead of you.
            ]]>
        </item>
        <item>> Continue</item>
        <item>a2</item>
        <item>1</item>
        <item>introduction</item>
        <item>Dialog</item>
    </string-array>
    <string-array name="a1_1">
        <item>
            <![CDATA[
             You wake up, finding yourself in the middle of a forest. The trees are thick and the sky is dark. You feel like you\'ve been here before<br>
             <br>
            A familiar fatigue strikes your entire body. Suddenly, flashes of events you are yet, or already have, experienced rush through your mind.<br>
            <br>
            It seems you\'ve returned back in time. The uneasiness you felt after killing the curses linger still. Perhaps a different choice will answer your questions.<br>
            <br>
            Determined, you stand up, eyes drawn to the path ahead of you once more.
            ]]>
        </item>
        <item>> Continue</item>
        <item>a2</item>
        <item>1</item>
        <item>introduction</item>
        <item>Dialog</item>
    </string-array>
    <string-array name="a1_2">
        <item>
            <![CDATA[
            You wake up, finding yourself in the middle of the forest. The trees are thick and the sky is dark.<br> You\'ve been here countless times now.<br>
            <br>
            Your memories are clear, and though the curse is strong, a long forgotten duty must be fulfilled.<br>
            <br>
            Determined, you stand up, eyes drawn to the path ahead of you once more.
            ]]>
        </item>
        <item>> Continue</item>
        <item>a1_3</item>
        <item>1</item>
        <item>introduction</item>
        <item>Dialog</item>
    </string-array>
    <string-array name="a1_3">
        <item>
            <![CDATA[
            You walk. The atmosphere around is eerily silent.<br>
            <br>
            The silence is interrupted by a voice in the distance. It seems the Guardian is calling out to you once more.
            ]]>
        </item>
        <item>> Continue</item>
        <item>a1_4</item>
        <item>1</item>
        <item>introduction</item>
        <item>Dialog</item>
    </string-array>
</resources>